# mhat

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: black.yaml  mypy.yaml  tests.yaml
scripts/: calcs.py  compare.ipynb  evaluate.py  nd2_to_zarr.py  new_threshold.py  organize_data.py  predict_pipeline.py  run_multihypo_tracking.py  run_tracking.py  run_voronoi_otsu.py  set_fov_roi.py  track_eval.py  track_excercise.ipynb  track_utils.py  train_pipeline.py  view_data_ng.py  view_multihypo_results_napari.py  view_predictions_ng.py  view_synthetic_data_ng.py  view_tracking_results_napari.py  visualization.py
scripts/01_training/: train_config.toml  train_pipeline.py
scripts/02_segmentation/: predict_pipeline.py  run_voronoi_otsu.py
scripts/03_tracking/: run_tracking.py  tracking_config.toml
scripts/04_evaluation/: compare.ipynb  compute_summary_stats.py  eval_config.toml  evaluate_segmentation.py  inspect_results.py  run_evaluation.py  track_eval.py
scripts/05_visualization/: view_batch_ng.py  view_data_ng.py  view_nd2_ng.py  view_post_processing_napari.py  view_predictions_ng.py  view_synthetic_data_ng.py  view_synthetic_gt_napari.py  view_tracking_results_napari.py  visualization.py
scripts/configs/: config.toml  tracking_config.toml
scripts/training/: darts_config.toml
src/darts_experiments/utils/: data.py  segmentation_storage.py
src/darts_experiments/visualization/: view_data_ng.py
src/darts_utils/: data.py  experiment_metadata.py
src/darts_utils/evaluation/: __init__.py  compute_iou.py  eval_io.py  evaluate_segmentation.py  evaluate_tracking.py
src/darts_utils/gunpowder/: __init__.py  add_lsd.py  darts_source.py  random_noise_aug.py
src/darts_utils/scripts/: run_voronoi_otsu.py
src/darts_utils/segmentation/: __init__.py  affinities.py  agglomerate.py  agglomeration.py  compute_fragments.py  mtlsd_model.py  voronoi_otsu.py
src/darts_utils/tracking/: __init__.py  create_multihypo_graph.py  solve_with_motile.py  tracks_io.py  utils.py
src/darts_utils/utils/: data.py  segmentation_storage.py
src/darts_utils/visualization/: napari_utils.py  view_data_ng.py
src/mhat/evaluation/: evaluate_segmentation.py  (+1 more)
(+7 files in other folders)
