[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "darts_utils"
description = "Experiments and scripts for DARTS project: mother machine cell segmentation and tracking."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "malinmayorc@janelia.hhmi.org", name = "Funke Lab" },
]
dynamic = ["version"]
dependencies = [
  "neuroglancer",
  "argparse",
  "zarr",
  "scikit-image",
  "gitpython",
  "pytorch",
  "pytorch-cuda=11.8",
  "lsds",
  "funlib.learn.torch",
]

[project.optional-dependencies]
dev = [
  'pytest',
  'pytest-cov',
  'black',
  'mypy',
  'pdoc',
  'pre-commit'
]

[project.urls]
homepage = "https://github.com/funkelab/darts_experiments"
repository = "https://github.com/funkelab/darts_experiments"

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
extend-select = [
    "E",    # style errors
    "F",    # flakes
    "I001", # isort
    "U",    # pyupgrade
    "S",    # bandit
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
]
